plugins {
    id 'java'
}

group 'com.synfron.reshaper.burp'
version '2.1.0-next'

targetCompatibility = '17'
sourceCompatibility = '17'

repositories {
    mavenCentral()
}

dependencies {
    testImplementation 'junit:junit:4.13.2'
    implementation 'org.apache.httpcomponents:httpclient:4.5.13'
    implementation 'org.mozilla:rhino:1.7.14'
    implementation 'cat.inspiracio:rhino-js-engine:1.7.10'
    implementation 'commons-io:commons-io:2.11.0'
    implementation 'org.apache.commons:commons-lang3:3.12.0'
    implementation 'net.jodah:expiringmap:0.5.10'
    implementation 'com.miglayout:miglayout-swing:11.0'
    implementation 'com.jayway.jsonpath:json-path:2.7.0'
    implementation 'org.rypt:f8:1.1-RC1'
    implementation 'org.apache.commons:commons-csv:1.9.0'
    implementation 'com.alexandriasoftware.swing:jsplitbutton:1.3.1'
    implementation files('libs/htmlchardet-1.0.2.1.jar')
    implementation 'org.jsoup:jsoup:1.15.3'
    compileOnly 'org.projectlombok:lombok:1.18.24'
    annotationProcessor 'org.projectlombok:lombok:1.18.24'
    implementation 'net.portswigger.burp.extensions:montoya-api:2023.3'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.0'
    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.14.0'
    testImplementation 'org.mockito:mockito-core:4.8.0'
    implementation 'org.apache.commons:commons-text:1.10.0'
}

jar {
    from {
        duplicatesStrategy(DuplicatesStrategy.EXCLUDE)
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }
}
